--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     <a target = "_blank" href="https://www.instagram.com/shanmukha_gorle/?hl=en">Redirect me to my instagaram page</a>
     <!--the second one opens the insta profile in a new tab-->
 
-    
+    <div>
+        <h1>this is first DIV</h1>
+        <p>this is my paragraph of first div</p>
+    </div>
+    <div>
+        <h1>this is second DIV</h1>
+        <p>this is paragraph of second div</p>
+    </div>
 </body>
 </html>
