--- a/Class 2/lists.html
+++ b/Class 2/lists.html
@@ -31,5 +31,31 @@
         <li>strawberry</li>
         <li>orange</li>
     </ul>
+    <h3>Descriptive Lists</h3>
+    <dl>
+        <dt>HTML</dt>
+        <dd>It is a markup language</dd>
+        <dt>CSS</dt>
+        <dd>Cascading stylesheet</dd>
+    </dl>
+    <h3>Nested Lists</h3>
+    <ul>
+        <li>Beers
+            <ol>
+                <li>Budweiser</li>
+                <li>Kingfisher</li>
+                <li>Storm</li>
+                <li>Haywards</li>
+                <li>Corona Beer</li>
+            </ol>
+        </li>
+        <li>Whisky
+            <ol>
+                <li>Royal Stag</li>
+                <li>Mansion House</li>
+                <li>Royal Green</li>
+            </ol>
+        </li>
+    </ul>
 </body>
 </html>
