--- a/Class 3/CSS Selectors/Q10.html
+++ b/Class 3/CSS Selectors/Q10.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      #the-one>p.c1.c2{
+        color: blue;
+      }
+      #the-one>div.c1.c2{
+        color: blue;
+      }
       
     </style>
 </head>
